--- a/Loan_Default_Predictor.ipynb
+++ b/Loan_Default_Predictor.ipynb
@@ -6,7 +6,7 @@
       "name": "Loan Default Predictor",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM0QF2+DJOG0Epeh21Kk+CW",
+      "authorship_tag": "ABX9TyMaUFjt7RKy4B+WFB5h63SN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1454,7 +1454,7 @@
       },
       "source": [
         "from sklearn import svm\n",
-        "modle = svm.SVC(kernel='rbf', gamma=0.1)\n",
+        "modle = svm.SVC(kernel='rbf')\n",
         "classify(model, X, y)"
       ],
       "execution_count": null,
